--- a/cositas/sttf1.html
+++ b/cositas/sttf1.html
@@ -11,23 +11,66 @@
     <title>Elsword</title>
 </head>
 <body>
-    <article class="try">
-        <li><a href="">Add</a></li>
-        <li><a href="">Ain</a></li>
-        <li><a href="">Ara</a></li>
-        <li><a href="">Aisha</a></li>
-        <li><a href="">Chung</a></li>
-        <li><a href="">Elesis</a></li>
-        <li><a href="">Elsword</a></li>
-        <li><a href="">Eve</a></li>
-        <li><a href="">Labi</a></li>
-        <li><a href="">LuCiel</a></li>
-        <li><a href="">Noah</a></li>
-        <li><a href="">Raven</a></li>
-        <li><a href="">Rena</a></li>
-        <li><a href="">Rose</a></li>
-      
-    </article>
+    <header class="header">
+        <img src="./assets/nobg-logo.png" alt="">
+    </header>
+    <nav class="nav hori">
+        <li><a href="sttf1.html#elsword">Elsword</a></li>
+        <li> <a href="sttf1.html#ara">Ara</a></li>
+        <li><a href="sttf1.html#raven">Raven</a></li>
+        <li><a href="sttf1.html#eve">Eve</a></li>
+        <li><a href="sttf1.html#chung">chung </a></li>
+        <li><a href="sttf1.html#add">Add</a></li>
+        <li><a href="sttf1.html#ain">Ain</a></li>
+        <li><a href="sttf1.html#labi">Labi</a></li>
+        <li><a href="sttf1.html#noah">Noah</a></li>
+        <li><a href="sttf1.html#elesis">Elesis </a></li>
+        <li><a href="sttf1.html#rose">Rose</a></li>
+        <li><a href="sttf1.html#luciel">LuCiel</a></li>
+    </nav>
+    <main class="container">
+        <section  id="elsword">
+            <article class="card">
+                <h2>Knight Emperor</h2>
+            </article>
+        </section>
+        <section class="card" id="ara">
+            <article>
+
+            </article>
+        </section>
+        <section class="card" id="raven">
+            <article></article>
+        </section>
+        <section class="card" id="eve">
+            <article></article>
+        </section>
+        <section class="card" id="chung">
+            <article></article>
+        </section>
+        <section class="card" id="add">
+            <article></article>
+        </section>
+        <section class="card" id="ain">
+            <article></article>
+        </section>
+        <section class="card" id="labi">
+            <article></article>
+        </section>
+        <section class="card" id="noah">
+            <article></article>
+        </section>
+        <section class="card" id="elesis">
+            <article></article>
+        </section>
+        <section class="card" id="rose">
+            <article></article>
+        </section>
+        <section class="card" id="luciel">
+            <article></article>
+        </section>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </main>
     
 </body>
 </html>
